fixed brand icon z-index in links page

--- a/src/output.css
+++ b/src/output.css
@@ -1925,7 +1925,7 @@ a.email:hover {
   fill: var(--brand-color);
   stroke: var(--brand-color);
   opacity: 1;
-  z-index: 99;
+  z-index: 10;
 }
 
 .username {
